// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pod/PodVolumeSectionDetailsView Empty 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 makeStyles-sectionHeader makeStyles-sectionHeader css-6ejd34-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap makeStyles-sectionTitle makeStyles-sectionTitle css-1c4rm8p-MuiTypography-root"
          >
            Volumes
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="makeStyles-box MuiBox-root css-0"
    />
  </div>
</div>
`;

exports[`Storyshots Pod/PodVolumeSectionDetailsView Short 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 makeStyles-sectionHeader makeStyles-sectionHeader css-6ejd34-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap makeStyles-sectionTitle makeStyles-sectionTitle css-1c4rm8p-MuiTypography-root"
          >
            Volumes
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="makeStyles-box MuiBox-root css-0"
    >
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          ca-certs
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            ca-certs
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /etc/ssl/certs
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          etc-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            etc-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /etc/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pod/PodVolumeSectionDetailsView Successful 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 makeStyles-sectionHeader makeStyles-sectionHeader css-6ejd34-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap makeStyles-sectionTitle makeStyles-sectionTitle css-1c4rm8p-MuiTypography-root"
          >
            Volumes
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="makeStyles-box MuiBox-root css-0"
    >
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          ca-certs
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            ca-certs
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /etc/ssl/certs
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          etc-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            etc-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /etc/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          flexvolume-dir
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            flexvolume-dir
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /usr/libexec/kubernetes/kubelet-plugins/volume/exec
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          k8s-certs
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            k8s-certs
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /var/lib/minikube/certs
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          kubeconfig
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            kubeconfig
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /etc/kubernetes/controller-manager.conf
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            FileOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          usr-local-share-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            usr-local-share-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /usr/local/share/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 makeStyles-metadataNameCell makeStyles-highlightRow css-49904w-MuiGrid-root"
        >
          usr-share-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            usr-share-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            /usr/share/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
